# CodeReview-Crew

./: README.md
backend/: Dockerfile  agents.py  github_pr.py  main.py  orchestrator.py  pyproject.toml  tools.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/review/: page.tsx
frontend/src/components/: Navbar.tsx  RepoGraph.tsx
frontend/src/components/review/: FileExplorer.tsx  ReviewProgressView.tsx  ReviewResultsView.tsx  SelectionView.tsx  types.ts  utils.ts
